# CV_Tirana

./: README.md  pyproject.toml
IMAGE CLASSIFICATION/: P1_Object_classification.ipynb
IMAGE PREPROCESSING/: Index.md
M1_Image Processing/: Index.md  auto_poetry_add.py  deps.py  ex1_my.ipynb
M2_Image Segmentation/: Exercise 2.ipynb  Index.md  Thresholding_methods.ipynb  p1_Thresholding_methods.ipynb  p2_Unsupervised_Segmentation.ipynb  p3_Supervised_Segmentation.ipynb
M3_Image Classification/: Exercise3.ipynb  Exercise4.ipynb  Exercise4_solution.ipynb  Index.md  P1_Object_classification.ipynb  p2_Regional_attributes.ipynb  p2_regional_attributes_colab.ipynb
M4_Deep Learning/: Example.ipynb  Example_Classification_2.ipynb  p1_segmentation.ipynb  p2_classification.ipynb  test.ipynb
